--- a/kemika-root/pom.xml
+++ b/kemika-root/pom.xml
@@ -18,6 +18,7 @@
     <spring.version>3.2.1.RELEASE</spring.version>
     <spring.security.version>3.1.3.RELEASE</spring.security.version>
     <hibernate.version>4.1.9.Final</hibernate.version>
+    <hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
     <morphia.version>1.2.2</morphia.version>
     <spring.data.mongodb.version>1.2.0.RELEASE</spring.data.mongodb.version>
     <spring.data.jpa.version>1.3.0.RELEASE</spring.data.jpa.version>
@@ -107,6 +108,11 @@
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
         <version>${hibernate.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>${hibernate.validator.version}</version>
       </dependency>
 
       <!-- PERSISTENCE -->
