--- a/kemika-root/pom.xml
+++ b/kemika-root/pom.xml
@@ -23,7 +23,7 @@
     <spring.data.mongodb.version>1.2.0.RELEASE</spring.data.mongodb.version>
     <spring.data.jpa.version>1.3.0.RELEASE</spring.data.jpa.version>
     <mysql.connector.version>5.1.23</mysql.connector.version>
-    <c3p0.version>0.9.1.2</c3p0.version>
+    <c3p0.version>0.9.2.1</c3p0.version>
     <joda-time.version>2.1</joda-time.version>
     <jackson.version>1.9.12</jackson.version>
 
@@ -122,7 +122,7 @@
         <version>${mysql.connector.version}</version>
       </dependency>
       <dependency>
-        <groupId>c3p0</groupId>
+        <groupId>com.mchange</groupId>
         <artifactId>c3p0</artifactId>
         <version>${c3p0.version}</version>
       </dependency>
