--- a/kemika-root/kemika-web/pom.xml
+++ b/kemika-root/kemika-web/pom.xml
@@ -100,7 +100,17 @@
       <artifactId>commons-lang</artifactId>
       <version>2.3</version>
     </dependency>
-    
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
     <!-- TEST -->
 
     <!-- PROVIDED -->
