--- a/kemika-root/kemika-commons/kemika-commons-services/src/test/resources/db.properties
+++ b/kemika-root/kemika-commons/kemika-commons-services/src/test/resources/db.properties
@@ -5,4 +5,4 @@ jpa.username = SA
 jpa.password = 
 hibernate.dialect = org.hibernate.dialect.HSQLDialect
 hibernate.show_sql = true
-hibernate.hbm2ddl.auto = update
+hibernate.hbm2ddl.auto = create
