REQUIRE YOUR SECURITY MODULE FROM THE WEBAPP!!!!1

--- a/kemika-root/pom.xml
+++ b/kemika-root/pom.xml
@@ -54,6 +54,11 @@
         <artifactId>kemika-commons-services</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <dependency>
+        <groupId>kemika</groupId>
+        <artifactId>kemika-security</artifactId>
+        <version>${project.version}</version>
+      </dependency>
       
       <!-- SPRING -->
       <dependency>
