--- a/kemika-root/kemika-web/pom.xml
+++ b/kemika-root/kemika-web/pom.xml
@@ -25,6 +25,10 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>kemika</groupId>
+      <artifactId>kemika-security</artifactId>
+    </dependency>
 
     <!-- SPRING -->
     <dependency>
