--- a/kemika-root/pom.xml
+++ b/kemika-root/pom.xml
@@ -26,6 +26,7 @@
     <c3p0.version>0.9.2.1</c3p0.version>
     <joda-time.version>2.1</joda-time.version>
     <jackson.version>1.9.12</jackson.version>
+    <commons.lang.version>2.3</commons.lang.version>
 
     <!-- VIEW -->
     <freemarker.version>2.3.14</freemarker.version>
@@ -153,6 +154,13 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>${logback.version}</version>
+      </dependency>
+
+      <!-- COMMINS -->
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>${commons.lang.version}</version>
       </dependency>
 
       <!-- TEST -->
