--- a/kemika-root/kemika-commons/kemika-commons-test/pom.xml
+++ b/kemika-root/kemika-commons/kemika-commons-test/pom.xml
@@ -7,6 +7,7 @@
     <version>1.0</version>
   </parent>
   <artifactId>kemika-commons-test</artifactId>
+  <name>Kemika :: Commons :: Test</name>
   <packaging>jar</packaging>
 
   <dependencies>
