--- a/kemika-root/kemika-commons/pom.xml
+++ b/kemika-root/kemika-commons/pom.xml
@@ -7,6 +7,7 @@
   </parent>
   <groupId>kemika-commons</groupId>
   <artifactId>kemika-commons</artifactId>
+  <name>Kemika :: Commons</name>
   <packaging>pom</packaging>
   <modules>
   	<module>kemika-commons-models</module>
